configs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    name: nginx
spec:
  selector:
    name: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
